# DocBox

./: .gitignore  CONTRIBUTING.md  COPYRIGHT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_HANDOFF.md  HIPAA_COMPLIANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  IP_OWNERSHIP.md  LICENSE  NOTICE.md  PLAN_VS_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY  SECURITY.md  SYSTEM_COMPLETION_REPORT.md  docker-compose.yml
.cursor/plans/: healthcare-rag-system-47853452.plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: dependencies.py
backend/api/routes/: __init__.py  admin.py  appointments.py  auth.py  clinics.py  graph.py  kiosk.py  patients.py  rag.py
backend/database/: postgres.py
backend/graph/: neo4j_client.py
backend/migrations/: env.py
backend/migrations/versions/: initial_schema.py
backend/models/: __init__.py  appointment.py  audit.py  clinic.py  patient.py  user.py
backend/rag/: embeddings.py  retrieval.py
backend/schemas/: __init__.py  appointment.py  clinic.py  patient.py
backend/security/: audit.py  auth.py  encryption.py
kiosk-app/: Dockerfile  next.config.js  package.json
kiosk-app/app/: globals.css  layout.tsx  page.tsx
kiosk-app/components/: AppointmentLookup.tsx  BiometricAuth.tsx  CheckInConfirmation.tsx  WelcomeScreen.tsx
monitoring/: prometheus.yml
scripts/: init-databases.sh
web-app/: Dockerfile  next.config.js  package.json  tailwind.config.ts
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/app/auth/login/: page.tsx
web-app/app/dashboard/: layout.tsx  page.tsx
web-app/app/dashboard/appointments/: page.tsx
web-app/app/dashboard/patients/: page.tsx
